Make FlowMap with NonEmpty

--- a/package.yaml
+++ b/package.yaml
@@ -18,8 +18,8 @@ dependencies:
   - aeson
   - bifunctors
   - binary
-  - binary-orphans >=0.1.1
-  - binary-tagged
+  - binary-orphans >=0.1.3.0
+  - binary-tagged >=0.1.4.0 && <0.2
   - bytestring
   - deepseq
   - directory
@@ -31,6 +31,7 @@ dependencies:
   - old-locale
   - optparse-applicative
   - path
+  - semigroups
   - tagged
   - text
   - time
