--- a/stack-lts-3.yaml
+++ b/stack-lts-3.yaml
@@ -1,6 +1,7 @@
-flags: {}
+resolver: lts-3.22
 packages:
 - '.'
 extra-deps:
+- binary-tagged-0.1.4.0
 - flowdock-rest-0.1.0.0
-resolver: lts-3.16
+flags: {}
