--- a/flowdock-grep.cabal
+++ b/flowdock-grep.cabal
@@ -34,8 +34,8 @@ executable flowdock-grep
     , aeson
     , bifunctors
     , binary
-    , binary-orphans >=0.1.1
-    , binary-tagged
+    , binary-orphans >=0.1.3.0
+    , binary-tagged >=0.1.4.0 && <0.2
     , bytestring
     , deepseq
     , directory
@@ -47,6 +47,7 @@ executable flowdock-grep
     , old-locale
     , optparse-applicative
     , path
+    , semigroups
     , tagged
     , text
     , time
