--- a/flowdock-grep.cabal
+++ b/flowdock-grep.cabal
@@ -1,4 +1,4 @@
--- This file has been generated from package.yaml by hpack version 0.14.1.
+-- This file has been generated from package.yaml by hpack version 0.15.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -45,7 +45,7 @@ executable flowdock-grep
     , http-client-tls
     , lens
     , old-locale
-    , optparse-applicative
+    , optparse-applicative <0.13
     , path
     , semigroups
     , tagged
