--- a/flowdock-grep.cabal
+++ b/flowdock-grep.cabal
@@ -31,7 +31,9 @@ executable flowdock-grep
   build-depends:
       base >= 4.7 && <4.10
     , base-compat
+    , flowdock-rest >=0.1.0.0
     , aeson
+    , ansi-terminal
     , bifunctors
     , binary
     , binary-orphans >=0.1.3.0
@@ -53,5 +55,5 @@ executable flowdock-grep
     , time
     , time-locale-compat
     , unordered-containers
-    , flowdock-rest >=0.1.0.0
+    , vector
   default-language: Haskell2010
