--- a/flowdock-grep.cabal
+++ b/flowdock-grep.cabal
@@ -32,6 +32,7 @@ executable flowdock-grep
     , ansi-terminal
     , bifunctors
     , binary
+    , binary-instances
     , binary-orphans >=0.1.3.0
     , binary-tagged >=0.1.4.0 && <0.4
     , bytestring
